# container-health-status-dashboard

./: README.md  celery_worker.py  docker-compose.yml  docker_utils.py  dockerfile  main.py  pyproject.toml  tasks.py
templates/: status.html
