[project]
name = "container-health-status"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "celery>=5.5.3",
    "fastapi>=0.116.1",
    "jinja2>=3.1.6",
    "python-on-whales>=0.77.0",
    "redis>=6.2.0",
    "uvicorn>=0.35.0",
]
